FIX:  cannot resolve symbol R

--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -15,10 +15,11 @@
         android:layout_marginRight="0dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/storyTextView"
         app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintRight_toTopOf="@+id/storyTextView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/page0"
         tools:src="@drawable/page0"/>
 
