--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -8,7 +8,7 @@
     tools:context="uk.co.jonniegrieve.newinteractivestory.ui.StoryActivity">
 
     <Button
-        android:id="@+id/choice1"
+        android:id="@+id/choice1Button"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginLeft="8dp"
@@ -16,14 +16,14 @@
         android:text="@string/page0_choice1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/choice2"
+        app:layout_constraintBottom_toTopOf="@+id/choice2Button"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintHorizontal_bias="0.0"
         />
 
     <Button
-        android:id="@+id/choice2"
+        android:id="@+id/choice2Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -41,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/choice1"
+        app:layout_constraintBottom_toTopOf="@+id/choice1Button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
 
